--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sample Site</title>
+    <title>This is Masaharu Ozawa coding website.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
     </style>
@@ -12,7 +12,7 @@
 <header>
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Sample Site</a>
+            <a class="navbar-brand" href="index.html">lenguages are HTML, CSS...</a>
         </div>
     </nav>
 </header>
@@ -20,15 +20,13 @@
     <div class="container mt-5 py-5">
         <div class="row">
             <h2>About</h2>
-            <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+            <p>Main language is very beginner</p>
         </div>
     </div>
 </main>
 <footer class="py-3 fixed-bottom bg-body-tertiary">
   <div class="text-center">
-    <span class="text-body-secondary">© Sample Site</span>
+    <span class="text-body-secondary">2024 © Masaharu Ozawa.All Rights Researved.</span>
   </div>
 </footer>
 </body>
