--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 <header>
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Sample Site</a>
+            <a class="navbar-brand" href="index.html">Masaharu Ozawa website</a>
         </div>
     </nav>
 </header>
 <main>
     <div class="container mt-5 py-5">
         <div class="p-4 rounded bg-body-secondary">
-            <h1 class="display-5 fst-italic">Welcome to Sample Site</h1>
-            <p class="lead mt-5">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p class="lead">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p class="lead"><a href="about.html">さらに詳しく</a></p>        
+            <h1 class="display-5 fst-italic">Welcome to Masaharu Ozawa coding website</h1>
+            <p class="lead mt-5">Study languages are HTML, CSS...</p>
+            <p class="lead">intersted in other languages....</p>
+            <p class="lead"><a href="about.html">more</a></p>        
         </div>
         <div class="row my-5">
             <h2>Contact</h2>
-            <p>お問い合わせは <a href="#">sample@sample.com</a> にお送りください。</p>
+            <p>contact  <a href="#">sample@sample.com</a> にお送りください。</p>
         </div>
     </div>
 </main>
